# task-py

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  DEVELOPMENT.md  LICENSE  README.md  __init__.py  argparse_utils.py  poetry.toml  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  run.sh  setup.py  task.py
.github/: dependabot.yml
.github/workflows/: build-container.yml  dependabot.yml  run_tests.yaml
build-support/docker/: addgroup.sh  adduser.sh  install-asdf.sh  install-pipx.sh  install-poetry.sh  install-python.sh
build-support/python/run/: gen_docs_development_md.py  update_versions_file.py
build-support/shell/run/: config.sh
docs/: index.html  versions.json
docs/_src/: conf.py  index.rst  index_introduction.md
docs/v0.3.0/: DEVELOPMENT.html  genindex.html  index.html  index_introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/v0.3.0/_downloads/39944d5d14db7ff5775a5228d2fbfcf5/: config.sh
docs/v0.3.0/_downloads/84faf3e208b22358d9226ffac1aa0f30/: .ycm_extra_conf.py
docs/v0.3.0/_downloads/b1a06b74a5029dcb8d0e6f89eae200a3/: pyproject.toml
docs/v0.3.0/_downloads/ec22a0b8a666cc5753b90f573e49d3ce/: run.sh
docs/v0.3.0/_sources/: DEVELOPMENT.md.txt
docs/v0.3.0/_sources/api/: lc_task.cli.rst.txt
docs/v0.3.0/_static/: copybutton.js
docs/v0.3.0/api/: lc_task.cli.html  lc_task.html  lc_task.task.html
docs/v0.3.0/doctrees/: environment.pickle  index.doctree  index_introduction.doctree
docs/v0.3.0/doctrees/api/: lc_task.cli.doctree  lc_task.doctree  lc_task.task.doctree
docs/v0.3.1/: DEVELOPMENT.html  genindex.html  index.html  index_introduction.html  objects.inv  py-modindex.html  search.html
docs/v0.3.1/_downloads/b1a06b74a5029dcb8d0e6f89eae200a3/: pyproject.toml
docs/v0.3.1/_downloads/ec22a0b8a666cc5753b90f573e49d3ce/: run.sh
docs/v0.3.1/_downloads/f59b9065596dfc53f58d95dc0ae0be90/: Dockerfile
docs/v0.3.1/_sources/api/: lc_task.rst.txt  lc_task.task.rst.txt
docs/v0.3.1/api/: lc_task.cli.html  lc_task.html  lc_task.task.html
docs/v0.3.1/doctrees/: DEVELOPMENT.doctree  environment.pickle  index.doctree
lc_task/: LICENSE  __init__.py  cli.py  task.py
scripts/: make-pip-release.sh  make-release.sh  remove-dev-files.sh  remove-tests.sh  run-lint.sh  run-tests.sh  setup.py
src/lc_task/: __init__.py  cli.py  task.py
tests/lc_task/: test_cli.py  test_task.py
